--- a/style.css
+++ b/style.css
@@ -1,50 +1,41 @@
-.container-parent h1 {
+*, html {
+    padding: 0;
+    margin: 0;
+}
+
+.main-container {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+.header {
+    position: relative;
+    background-color: rgb(186, 215, 241);
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.container-parent {
-    background-color: rgb(0, 30, 81);
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    color: white;
+#header {
+    padding: 3rem;
 }
 
-.mainContainer {
-    padding: 10px;
-    background-color: rgb(0, 34, 107);
+.services {
     position: relative;
-    height: 80%;
+    height: 100%;
+    background-color: rgb(154, 203, 246);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.input-text {
-    background-color: rgb(173, 201, 255);
-    width: 70%;
-}
-
-.response-container {
-    background-color: rgb(1, 54, 114);
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-    border-radius: 5px;
-    height: 85%;
-    overflow-y: scroll;
-}
-
-.wait {
-    display: block;
-}
-
-.wait.hide {
-    display: none;
-}
-
-.message-content {
-    background-color: rgb(11, 46, 78);
-    padding: 0.5rem;
-    margin: 1rem;
-    border-radius: 10px;
-    text-align: left;
+.services-container {
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
