fix first bugs on instagram downloader feature

--- a/InstagramDownloader/ig-downloader-style.css
+++ b/InstagramDownloader/ig-downloader-style.css
@@ -19,8 +19,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .form-container input {
     width: 70%;
+}
+
+p.hide {
+    display: none;
 }
