--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     margin: 0;
 }
 
+body {
+    background-color: rgb(154, 203, 246);
+}
+
 .main-container {
     position: absolute;
     height: 100%;
@@ -24,16 +28,15 @@
 }
 
 .services {
-    position: relative;
-    height: 100%;
-    background-color: rgb(154, 203, 246);
+    /* position: relative;
+    height: 100%; */
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .services-container {
-    height: 200px;
+    /* height: 200px; */
     display: flex;
     flex-direction: column;
     align-items: center;
