--- a/CCTV_Service/Yogyakarta/style.css
+++ b/CCTV_Service/Yogyakarta/style.css
@@ -26,6 +26,8 @@
 
 .footer {
     display: flex;
+    gap: 1rem;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding-top: 2rem;
